--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Simple Sidebar - Start Bootstrap Template</title>
+    <title>Present Homepage</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -31,16 +31,16 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">Dashboard</a>
+                    <a href="https://social.michaeldai.com">Socials 11</a>
                 </li>
                 <li>
-                    <a href="#">Shortcuts</a>
+                    <a href="https://present.michaeldai.com">Career Life Education</a>
                 </li>
                 <li>
-                    <a href="#">Overview</a>
+                    <a href="#">狗屎</a>
                 </li>
                 <li>
-                    <a href="#">Events</a>
+                    <a href="#"></a>
                 </li>
                 <li>
                     <a href="#">About</a>
@@ -58,10 +58,10 @@
         <!-- Page Content -->
         <div id="page-content-wrapper">
             <div class="container-fluid">
-                <h1>Simple Sidebar</h1>
-                <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
+                <h1>Home page</h1>
+                <p>This is a web-page to show all my work on</p>
                 <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-                <a href="#menu-toggle" class="btn btn-secondary" id="menu-toggle">Toggle Menu</a>
+                <a href="#menu-toggle" class="btn btn-seconda ry" id="menu-toggle">点击开始</a>
             </div>
         </div>
         <!-- /#page-content-wrapper -->
